Add get-functionality to event store
