# pkg/apiserver/apiserver.swagger.json
@@ -16,22 +16,6 @@
   ],
   "paths": {
     "/invocation": {
-      "get": {
-        "summary": "Search for workflow invocations based on a query",
-        "description": "By default the search returns at most 10 workflow invocations in no specific order.",
-        "operationId": "Search",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/apiserverWorkflowInvocationList"
-            }
-          }
-        },
-        "tags": [
-          "WorkflowInvocationAPI"
-        ]
-      },
       "post": {
         "summary": "Create a new workflow invocation",
         "description": "In case the invocation specification is missing fields or contains invalid fields, a HTTP 400 is returned.",
@@ -68,7 +52,7 @@
           "200": {
             "description": "",
             "schema": {
-              "$ref": "#/definitions/apiserverWorkflowInvocationGetReponse"
+              "$ref": "#/definitions/WorkflowInvocationContainer"
             }
           }
         },
@@ -121,7 +105,7 @@
           }
         },
         "tags": [
-          "FissionEnvironmentProxy"
+          "FunctionApi"
         ]
       }
     },
@@ -142,20 +126,6 @@
       }
     },
     "/workflow": {
-      "get": {
-        "operationId": "Search",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/apiserverSearchWorkflowResponse"
-            }
-          }
-        },
-        "tags": [
-          "WorkflowAPI"
-        ]
-      },
       "post": {
         "operationId": "Create",
         "responses": {
@@ -211,38 +181,6 @@
       "type": "object",
       "title": "Util"
     },
-    "Event": {
-      "type": "object",
-      "properties": {
-        "eventId": {
-          "$ref": "#/definitions/EventID"
-        },
-        "type": {
-          "type": "string"
-        },
-        "time": {
-          "type": "string",
-          "format": "date-time"
-        },
-        "data": {
-          "$ref": "#/definitions/protobufAny"
-        }
-      }
-    },
-    "EventID": {
-      "type": "object",
-      "properties": {
-        "subjects": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        },
-        "id": {
-          "type": "string"
-        }
-      }
-    },
     "Workflow": {
       "type": "object",
       "properties": {
@@ -257,6 +195,20 @@
         }
       }
     },
+    "WorkflowInvocationContainer": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string"
+        },
+        "spec": {
+          "$ref": "#/definitions/WorkflowInvocationSpec"
+        },
+        "status": {
+          "$ref": "#/definitions/WorkflowInvocationStatus"
+        }
+      }
+    },
     "WorkflowInvocationSpec": {
       "type": "object",
       "properties": {
@@ -265,33 +217,39 @@
         }
       }
     },
+    "WorkflowInvocationStatus": {
+      "type": "object",
+      "properties": {
+        "status": {
+          "$ref": "#/definitions/WorkflowInvocationStatusStatus"
+        },
+        "updatedAt": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "date-time"
+        }
+      }
+    },
+    "WorkflowInvocationStatusStatus": {
+      "type": "string",
+      "enum": [
+        "UNKNOWN",
+        "SCHEDULED",
+        "IN_PROGRESS",
+        "SUCCEEDED",
+        "FAILED",
+        "ABORTED"
+      ],
+      "default": "UNKNOWN"
+    },
     "apiserverHealth": {
       "type": "object",
       "properties": {
         "status": {
           "type": "string"
-        }
-      }
-    },
-    "apiserverSearchWorkflowResponse": {
-      "type": "object",
-      "properties": {
-        "data": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/Workflow"
-          }
-        }
-      }
-    },
-    "apiserverWorkflowInvocationGetReponse": {
-      "type": "object",
-      "properties": {
-        "events": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/Event"
-          }
         }
       }
     },
@@ -302,32 +260,6 @@
           "type": "string"
         }
       }
-    },
-    "apiserverWorkflowInvocationList": {
-      "type": "object",
-      "properties": {
-        "invocations": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        }
-      }
-    },
-    "protobufAny": {
-      "type": "object",
-      "properties": {
-        "type_url": {
-          "type": "string",
-          "description": "A URL/resource name whose content describes the type of the\nserialized protocol buffer message.\n\nFor URLs which use the scheme `http`, `https`, or no scheme, the\nfollowing restrictions and interpretations apply:\n\n* If no scheme is provided, `https` is assumed.\n* The last segment of the URL's path must represent the fully\n  qualified name of the type (as in `path/google.protobuf.Duration`).\n  The name should be in a canonical form (e.g., leading \".\" is\n  not accepted).\n* An HTTP GET on the URL must yield a [google.protobuf.Type][]\n  value in binary format, or produce an error.\n* Applications are allowed to cache lookup results based on the\n  URL, or have them precompiled into a binary to avoid any\n  lookup. Therefore, binary compatibility needs to be preserved\n  on changes to types. (Use versioned type names to manage\n  breaking changes.)\n\nSchemes other than `http`, `https` (or the empty scheme) might be\nused with implementation specific semantics."
-        },
-        "value": {
-          "type": "string",
-          "format": "byte",
-          "description": "Must be a valid serialized protocol buffer of the above specified type."
-        }
-      },
-      "description": "`Any` contains an arbitrary serialized protocol buffer message along with a\nURL that describes the type of the serialized message.\n\nProtobuf library provides support to pack/unpack Any values in the form\nof utility functions or additional generated methods of the Any type.\n\nExample 1: Pack and unpack a message in C++.\n\n    Foo foo = ...;\n    Any any;\n    any.PackFrom(foo);\n    ...\n    if (any.UnpackTo(\u0026foo)) {\n      ...\n    }\n\nExample 2: Pack and unpack a message in Java.\n\n    Foo foo = ...;\n    Any any = Any.pack(foo);\n    ...\n    if (any.is(Foo.class)) {\n      foo = any.unpack(Foo.class);\n    }\n\n Example 3: Pack and unpack a message in Python.\n\n    foo = Foo(...)\n    any = Any()\n    any.Pack(foo)\n    ...\n    if any.Is(Foo.DESCRIPTOR):\n      any.Unpack(foo)\n      ...\n\nThe pack methods provided by protobuf library will by default use\n'type.googleapis.com/full.type.name' as the type URL and the unpack\nmethods only use the fully qualified type name after the last '/'\nin the type URL, for example \"foo.bar.com/x/y.z\" will yield type\nname \"y.z\".\n\n\nJSON\n====\nThe JSON representation of an `Any` value uses the regular\nrepresentation of the deserialized, embedded message, with an\nadditional field `@type` which contains the type URL. Example:\n\n    package google.profile;\n    message Person {\n      string first_name = 1;\n      string last_name = 2;\n    }\n\n    {\n      \"@type\": \"type.googleapis.com/google.profile.Person\",\n      \"firstName\": \u003cstring\u003e,\n      \"lastName\": \u003cstring\u003e\n    }\n\nIf the embedded message type is well-known and has a custom JSON\nrepresentation, that representation will be embedded adding a field\n`value` which holds the custom JSON in addition to the `@type`\nfield. Example (for message [google.protobuf.Duration][]):\n\n    {\n      \"@type\": \"type.googleapis.com/google.protobuf.Duration\",\n      \"value\": \"1.212s\"\n    }"
     }
   }
 }
